--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,15 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="margin_xlarge">16dp</dimen>
+    <dimen name="margin_xxxlarge">40dp</dimen>
+    <dimen name="margin_large">12dp</dimen>
+    <dimen name="margin_xxlarge">20dp</dimen>
+
+    <dimen name="text_size_medium">15sp</dimen>
+    <dimen name="text_size_large">18sp</dimen>
+
+    <dimen name="btn_card_height">@dimen/abc_action_bar_default_height</dimen>
+
 </resources>
