feat(guide): basic guide page with ViewPager

--- a/app/src/main/res/layout/fragment_guide_first.xml
+++ b/app/src/main/res/layout/fragment_guide_first.xml
@@ -4,8 +4,7 @@
     android:gravity="center"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@color/background">
+    android:layout_height="fill_parent">
 
     <ImageView
         android:id="@id/guide_item_1"
