--- a/app/src/main/res/layout/fragment_guide_first.xml
+++ b/app/src/main/res/layout/fragment_guide_first.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout_guide_first"
     android:gravity="center"
     android:orientation="vertical"
     android:layout_width="fill_parent"
