--- a/app/src/main/res/layout/fragment_guide_sixth.xml
+++ b/app/src/main/res/layout/fragment_guide_sixth.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout_guide_sixth"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
