feat(anim): add background color transition while ViewPager is scrolling

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="background">#ff003479</color>
+    <color name="background">#FF1D2E5A</color>
+
+    <color name="guide_start_background">@color/background</color>
+    <color name="guide_end_background">#FF5494FC</color>
 </resources>
