--- a/app/src/main/res/layout/fragment_guide.xml
+++ b/app/src/main/res/layout/fragment_guide.xml
@@ -4,8 +4,7 @@
     xmlns:zhihu="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/background"
-    >
+    android:background="@color/background">
 
     <android.support.v4.view.ViewPager
         android:id="@id/pager"
